crates/fortitude/tests/snapshots/check__output_format_preview_azure.snap
---
source: crates/fortitude/tests/check.rs
info:
  program: fortitude
  args:
    - check
    - "--output-format"
    - azure
    - "--preview"
    - "--select"
    - implicit-typing
    - test.f90
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----
##vso[task.logissue type=error;sourcepath=[TMP]/test.f90;linenumber=1;columnnumber=1;code=implicit-typing;]program uses implicit typing

----- stderr -----
