crates/fortitude/tests/snapshots/check__output_format_preview_gitlab.snap
---
source: crates/fortitude/tests/check.rs
info:
  program: fortitude
  args:
    - check
    - "--output-format"
    - gitlab
    - "--preview"
    - "--select"
    - implicit-typing
    - test.f90
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----
[
  {
    "check_name": "implicit-typing",
    "description": "implicit-typing: program uses implicit typing",
    "severity": "major",
    "fingerprint": "fcf683c4c4180fca",
    "location": {
      "path": "test.f90",
      "positions": {
        "begin": {
          "line": 1,
          "column": 1
        },
        "end": {
          "line": 2,
          "column": 1
        }
      }
    }
  }
]
----- stderr -----
